title text change to sub title

--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div>
-        <h1>Title</h1>
+        <h1>SubTitle</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt architecto quos rerum libero delectus quae soluta expedita adipisci ab eveniet recusandae repellat nemo a cumque, amet, accusantium nesciunt optio? Perferendis assumenda nisi maxime cumque et nemo harum, delectus accusantium, minima itaque consequatur tempore vitae. Debitis voluptate ducimus asperiores porro deserunt.</p>
     </div>
 </body>
